--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
  <html lang="en">
  <head>
+  <meta name="description" content="Download Soccer Craze 25 and other amazing PC games for free. Get the latest football, racing, and action games now!">
+<meta name="keywords" content="Soccer Craze 25, free PC games, game download, football game, racing game, Ocean of Games alternative">
+<meta name="author" content="Salman Syed Creations">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="Soccer Craze 25 - Download Now">
+<meta property="og:description" content="Experience the ultimate football game with Soccer Craze 25! Download now for free.">
+<meta property="og:image" content="https://pcgames4627.github.io/images/soccer1.jpg">
+<meta property="og:url" content="https://pcgames4627.github.io/">
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Salman Syed Creations - Home</title>
