--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
      <title>Salman Syed Creations - Home</title>
      <link rel="stylesheet" href="styles.css">
      <script defer src="script.js"></script>
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_TRACKING_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-2QG4BWC1Q1');
+</script>
+
  </head>
  <body>
      <header>
