--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
      <link rel="stylesheet" href="styles.css">
      <script defer src="script.js"></script>
   <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_TRACKING_ID"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2QG4BWC1Q1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   gtag('config', 'G-2QG4BWC1Q1');
 </script>
+
 
  </head>
  <body>
