--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
      <link rel="stylesheet" href="styles.css">
      <script defer src="script.js"></script>
   <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2QG4BWC1Q1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=482107080"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-2QG4BWC1Q1');
+  gtag('config', '482107080');
 </script>
 
 
