--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
      <title>Salman Syed Creations - Home</title>
      <link rel="stylesheet" href="styles.css">
      <script defer src="script.js"></script>
-  <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=482107080"></script>
+  
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3C0E81DX5G"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '482107080');
+
+  gtag('config', 'G-3C0E81DX5G');
 </script>
 
 
