--- a/details.html
+++ b/details.html
@@ -30,7 +30,7 @@
                 <li>🎮 GPU: Intel HD Graphics</li>
             </ul>
 
-            <a href="https://apkadmin.com/kool81emqb42/SOCCER_CRAZE_25.zip.html" class="download-btn">Download Now</a>
+            <a href="https://apkadmin.com/kool81emqb42/SOCCER_CRAZE_25.zip.html" class="download-btn">🔗Link 1 (apkadmin)</a>
           <a href="https://www.mediafire.com/file/vr4aqgltn5nvydv/MediaFire_-_Getting_Started.pdf/file" class="download-btn">🔗 Link 2 (mediafire)</a>
 </main>
     </div>
