--- a/details.html
+++ b/details.html
@@ -31,7 +31,7 @@
             </ul>
 
             <a href="https://apkadmin.com/kool81emqb42/SOCCER_CRAZE_25.zip.html" class="download-btn">🔗Link 1 (apkadmin)</a>
-          <a href="https://www.mediafire.com/file/vr4aqgltn5nvydv/MediaFire_-_Getting_Started.pdf/file" class="download-btn">🔗 Link 2 (mediafire)</a>
+          <a href="https://www.mediafire.com/file/ijwcaskb14cs0ki/PES_25.zip/file" class="download-btn">🔗 Link 2 (mediafire)</a>
 </main>
     </div>
 
