--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
      <title>Salman Syed Creations - Home</title>
      <link rel="stylesheet" href="styles.css">
      <script defer src="script.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8190113481999074"
+     crossorigin="anonymous"></script>
   
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3C0E81DX5G"></script>
