--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
          <button onclick="searchGame()">🔍 Search</button>
      </header>
  
-     
+     <script type="text/javascript">
+	atOptions = {
+		'key' : '787948dde80adc2501c819c5f7a0ce19',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/787948dde80adc2501c819c5f7a0ce19/invoke.js"></script>
              <div class="tags">
     <a href="#" class="tag-button">Action</a>
     <a href="#" class="tag-button">Sports</a>
