--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
     <a href="#" class="tag-button">Adventure</a>
 </div>
 
-     
+     <div class="ad-container">
+    <script type="text/javascript" src="4764659"></script>
+</div>
+
  
      <section class="games-list">
          <div class="game-entry">
