--- a/details.html
+++ b/details.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '787948dde80adc2501c819c5f7a0ce19',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/787948dde80adc2501c819c5f7a0ce19/invoke.js"></script>
     <header>
         <h1>⚽ Soccer Craze 25 - Free Download</h1>
     </header>
@@ -38,6 +47,15 @@
     <footer>
         <p>© 2025 Salman Syed Creations | All Rights Reserved</p>
     </footer>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '787948dde80adc2501c819c5f7a0ce19',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/787948dde80adc2501c819c5f7a0ce19/invoke.js"></script>
 </body>
 </html>
