--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         <p>Experience realistic football like never before...</p>
         <a href="details.html" class="view-details-btn">View Details</a>
     </div>
+		 <div class="game-box">
+    <img src="images/real-cricket-26.jpg" alt="Real Cricket 26">
+    <h2>Real Cricket 26</h2>
+    <p>Experience the most authentic cricket gameplay with Real Cricket 26. Play various tournaments and modes.</p>
+    <a href="real-cricket-26.html" class="view-details-btn">View Details</a>
+</div>
+
          <p id="noResults" style="display:none;">No items found</p>
      </section>
  
