--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
  
      <div class="game-list">
     <div class="game-box">
-        <img src="images/soccer-craze.jpg" alt="Soccer Craze 25">
+        <img src="soccer-craze.jpg" alt="Soccer Craze 25">
         <h2>Soccer Craze 25</h2>
         <p>A thrilling football game featuring career mode, tournaments, and realistic gameplay.</p>
         <a href="soccer-craze.html" class="view-details-btn">View Details</a>
     </div>
 
     <div class="game-box">
-        <img src="images/real-cricket-26.jpg" alt="Real Cricket 26">
+        <img src="real-cricket-26.jpg" alt="Real Cricket 26">
         <h2>Real Cricket 26</h2>
         <p>Experience the most authentic cricket gameplay with Real Cricket 26. Play various tournaments and modes.</p>
         <a href="real-cricket-26.html" class="view-details-btn">View Details</a>
