--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
  
      <div class="game-list">
     <div class="game-box">
-        <img src="soccer-craze.jpg" alt="Soccer Craze 25">
+        <img src="sooccer-craze.jpg" alt="Soccer Craze 25">
         <h2>Soccer Craze 25</h2>
         <p>A thrilling football game featuring career mode, tournaments, and realistic gameplay.</p>
         <a href="soccer-craze.html" class="view-details-btn">View Details</a>
