--- a/real-cricket-26.html
+++ b/real-cricket-26.html
@@ -12,7 +12,7 @@
     </header>
 
     <div class="game-details">
-        <img src="images/real-cricket-26.jpg" alt="Real Cricket 26">
+        <img src="real-cricket-26.jpg" alt="Real Cricket 26">
         <p>Real Cricket 26 offers realistic gameplay, multiplayer modes, and immersive cricket experience. Download now!</p>
 
         <h3>Download Links:</h3>
