--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="sooccer-craze.jpg" alt="Soccer Craze 25">
         <h2>Soccer Craze 25</h2>
         <p>A thrilling football game featuring career mode, tournaments, and realistic gameplay.</p>
-        <a href="soccer-craze.html" class="view-details-btn">View Details</a>
+        <a href="details.html" class="view-details-btn">View Details</a>
     </div>
 
     <div class="game-box">
