--- a/index.html
+++ b/index.html
@@ -31,21 +31,14 @@
 
  </head>
  <body>
+	 <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
      <header>
          <h1>🎮 Welcome to Salman Syed Creations 🚀</h1>
          <input type="text" id="searchBar" placeholder="Search for games..." onkeyup="searchGame()">
          <button onclick="searchGame()">🔍 Search</button>
      </header>
  
-     <script type="text/javascript">
-	atOptions = {
-		'key' : '787948dde80adc2501c819c5f7a0ce19',
-		'format' : 'iframe',
-		'height' : 50,
-		'width' : 320,
-		'params' : {}
-	};
-</script>
+     
 <script type="text/javascript" src="//www.highperformanceformat.com/787948dde80adc2501c819c5f7a0ce19/invoke.js"></script>
              <div class="tags">
     <a href="#" class="tag-button">Action</a>
