--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
  
      <footer>
          <p>© 2025 Salman Syed Creations | All Rights Reserved</p>
+	     <script type="text/javascript">
+	atOptions = {
+		'key' : '787948dde80adc2501c819c5f7a0ce19',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/787948dde80adc2501c819c5f7a0ce19/invoke.js"></script>
      </footer>
  </body>
  </html>
