--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
   gtag('config', 'G-3C0E81DX5G');
 </script>
 
-
+<script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
  </head>
+<script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
+	 
  <body>
 	 <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
      <header>
