--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
  <html lang="en">
  <head>
-  <meta name="description" content="Download Soccer Craze 25 and other amazing PC games for free. Get the latest football, racing, and action games now!">
+ <meta name="galaksion-domain-verification" content="eb7f6711557ffe2c49daa7212f007e108bdb789a928d1bda5142c66fefa3cc81" />
+ <meta name="description" content="Download Soccer Craze 25 and other amazing PC games for free. Get the latest football, racing, and action games now!">
 <meta name="keywords" content="Soccer Craze 25, free PC games, game download, football game, racing game, Ocean of Games alternative">
 <meta name="author" content="Salman Syed Creations">
 <meta name="robots" content="index, follow">
