--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8190113481999074"
      crossorigin="anonymous"></script>
 	 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3C0E81DX5G"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-3C0E81DX5G');
-</script>
+<!-- Google Analytics -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=482107080"></script>
+   
+ <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-3C0E81DX5G"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+   gtag('config', '482107080');
+ 
+   gtag('config', 'G-3C0E81DX5G');
+ </script>
 
 <script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
  </head>
