--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8190113481999074"
      crossorigin="anonymous"></script>
 	 
+ <!-- Bidvertiser2098819 -->
 <!-- Google Analytics -->
  <script async src="https://www.googletagmanager.com/gtag/js?id=482107080"></script>
    
