--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+8<!DOCTYPE html>
  <html lang="en">
  <head>
  <meta name="galaksion-domain-verification" content="eb7f6711557ffe2c49daa7212f007e108bdb789a928d1bda5142c66fefa3cc81" />
@@ -34,7 +34,9 @@
  
    gtag('config', 'G-3C0E81DX5G');
  </script>
-
+<!-- import the webpage's javascript file -->
+	 
+<script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
 <script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
  </head>
 <script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
