--- a/index.html
+++ b/index.html
@@ -93,5 +93,6 @@
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/787948dde80adc2501c819c5f7a0ce19/invoke.js"></script>
      </footer>
+<link rel="javascript" href="adsterra.js">
  </body>
  </html>
