--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
  <body>
 	 <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
      <header>
+	     <script type="text/javascript" src="https://vdbaa.com/pun.php?section=General&pt=6&pub=194269&ga=g"></script>
 	     <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=194269&format=468x60&ga=g"></script>
 <noscript><a href="https://yllix.com/publishers/194269" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
          <h1>🎮 Welcome to Salman Syed Creations 🚀</h1>
