--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
          <h1>🎮 Welcome to Salman Syed Creations 🚀</h1>
          <input type="text" id="searchBar" placeholder="Search for games..." onkeyup="searchGame()">
          <button onclick="searchGame()">🔍 Search</button>
+	     <button onclick="openPopup()">Click Me</button>
+
+<script>
+function openPopup() {
+    var popup = document.createElement("script");
+    popup.src = "https://vdbaa.com/pun.php?section=General&pt=6&pub=194269&ga=g";
+    document.body.appendChild(popup);
+}
+</script>
+
      </header>
  
 <a href="https://organichits.co/?ref=Syed4627" target="_blank" title="Free Traffic Exchange"><img loading="lazy" src="https://cdn.organichits.co/banners/organichits-728x90.jpg" alt="Free Traffic Exchange" width="728" height="90"></a>
