--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-i8<!DOCTYPE html>
+<!DOCTYPE html>
  <html lang="en">
  <head>
  <meta name="galaksion-domain-verification" content="eb7f6711557ffe2c49daa7212f007e108bdb789a928d1bda5142c66fefa3cc81" />
@@ -45,12 +45,12 @@ i8<!DOCTYPE html>
 	 <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
      <header>
 	     <script type="text/javascript" src="https://vdbaa.com/pun.php?section=General&pt=6&pub=194269&ga=g"></script>
-	     
+	     <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=194269&format=468x60&ga=g"></script>
 <noscript><a href="https://yllix.com/publishers/194269" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
          <h1>🎮 Welcome to Salman Syed Creations 🚀</h1>
          <input type="text" id="searchBar" placeholder="Search for games..." onkeyup="searchGame()">
          <button onclick="searchGame()">🔍 Search</button>
-	     
+	     <button onclick="openPopup()">Click Me</button>
 
 
      </header>
@@ -122,20 +122,6 @@ function openPopup() {
     document.body.appendChild(popup);
 }
 </script>
-	 
-<script>
-    let adClicked = false; // Track if the ad was already clicked
 
-    function handleAdClick(event, targetUrl) {
-        event.preventDefault(); // Prevent default navigation
-
-        if (!adClicked) {
-            adClicked = true; // Mark ad as clicked
-            window.open("https://vdbaa.com/pun.php?section=General&pt=6&pub=194269&ga=g", "_blank");
-        } else {
-            window.location.href = targetUrl; // Redirect to details page
-        }
-
-</script>
  </body>
  </html>
