--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img src="soccer-craze.jpg" alt="Soccer Craze 25">
         <h2>Soccer Craze 25</h2>
         <p>A thrilling football game featuring career mode, tournaments, and realistic gameplay.</p>
-        <a href="real-cricket-26.html" class="view-details-btn" onclick="handleAdClick(event, 'real-cricket-26.html')">View Details</a>
+        <a href="details.html" class="view-details-btn" onclick="handleAdClick(event, 'real-cricket-26.html')">View Details</a>
 
 <script>
     let adClicked = false; // Track if the ad was already clicked
