--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@ function openPopup() {
     document.body.appendChild(popup);
 }
 </script>
-
+<script type="text/javascript" src="https://udbaa.com/slider.php?section=General&pub=194269&ga=g&side=random"></script>
  </body>
  </html>
