--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	 
 <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
 <script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
+<script src="https://cdn-server.top/p/mms.js?pub=194269&ga=g"></script>
  </head>
 <script type='text/javascript' src='//pl26124871.effectiveratecpm.com/ac/d3/c1/acd3c1b25af586cee953beb461621873.js'></script>
 	 
