--- a/details.html
+++ b/details.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+</script>
+<script type="text/javascript" src="https://udbaa.com/slider.php?section=General&pub=194269&ga=g&side=random"></script>
+ 
 <script type="text/javascript">
 	atOptions = {
 		'key' : '787948dde80adc2501c819c5f7a0ce19',
