--- a/real-cricket-26.html
+++ b/real-cricket-26.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    </script>
+<script type="text/javascript" src="https://udbaa.com/slider.php?section=General&pub=194269&ga=g&side=random"></script>
+ 
     <header>
         <h1>Real Cricket 26 - Free Download</h1>
     </header>
