--- a/details.html
+++ b/details.html
@@ -45,6 +45,7 @@
             <a href="https://apkadmin.com/kool81emqb42/SOCCER_CRAZE_25.zip.html" class="download-btn">🔗Link 1 (apkadmin)</a>
           <a href="https://www.mediafire.com/file/ijwcaskb14cs0ki/PES_25.zip/file" class="download-btn">🔗 Link 2 (mediafire)</a>
 </main>
+	    <a href="https://yllix.com/publishers/194269" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_7nc2s6.png" width="300" height="250" border="0" alt="yX Media - Monetize your website traffic with us" title="yX Media - Monetize your website traffic with us" /></a>
     </div>
 
     <footer>
