--- a/real-cricket-26.html
+++ b/real-cricket-26.html
@@ -20,7 +20,7 @@
 
         <h3>Download Links:</h3>
         <a href="https://apkadmin.com/tl4b4nza6m0u/RC_26.apk.html" class="download-btn">Download Link 1</a>
-        
+      <a href="https://vdbaa.com/fullpage.php?section=General&pub=194269&ga=g" class="download-btn">Download Link 1</a>
     </div>
 
     <footer>
