--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <h2>Real Cricket 26</h2>
         <p>Experience the most authentic cricket gameplay with Real Cricket 26. Play various tournaments and modes.</p>
         <a href="real-cricket-26.html" class="view-details-btn">View Details</a>
+      <a href="https://www.effectiveratecpm.com/xzr6c15j?key=eeb1fc45eee5079622936a866345640f" class="Fast-download-btn">Fast Diwnload</a>
     </div>
 </div>
 
