--- a/details.html
+++ b/details.html
@@ -57,10 +57,12 @@
           <a href="https://www.mediafire.com/file/ijwcaskb14cs0ki/PES_25.zip/file" class="download-btn">🔗 Link 2 (mediafire)</a>
 </main>
 	    <a href="https://yllix.com/publishers/194269" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub_7nc2s6.png" width="300" height="250" border="0" alt="yX Media - Monetize your website traffic with us" title="yX Media - Monetize your website traffic with us" /></a>
+   <a href="https://www.popads.net/users/refer/3559784"><img src="http://banners.popads.net/120x600.gif" alt="PopAds.net - The Best Popunder Adnetwork" /></a>
     </div>
 
     <footer>
         <p>© 2025 Salman Syed Creations | All Rights Reserved</p>
+   <a href="https://www.popads.net/users/refer/3559784"><img src="http://banners.popads.net/120x600.gif" alt="PopAds.net - The Best Popunder Adnetwork" /></a>
     </footer>
 <script type="text/javascript">
 	atOptions = {
