--- a/real-cricket-26.html
+++ b/real-cricket-26.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Cricket 26 - Download</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'ff05e6fb17718ea4bf3e284c86f427d7',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/ff05e6fb17718ea4bf3e284c86f427d7/invoke.js"></script>
 </head>
 <body>
     </script>
