--- a/real-cricket-26.html
+++ b/real-cricket-26.html
@@ -41,6 +41,17 @@
         <a href="https://vdbaa.com/fullpage.php?section=General&pub=194269&ga=g" class="download-btn">Download Link 1</a>
         <a href="https://apkadmin.com/tl4b4nza6m0u/RC_26.apk.html" class="download-btn">Download Link 2</a>
          </div>
+	
+<!-- Adsterra Banner Ad Below Game List -->
+<div class="ad-banner">
+    <script type="text/javascript" src="atOptions = {
+		'key' : 'ff05e6fb17718ea4bf3e284c86f427d7',
+		'format' : 'iframe',
+		'height' : 60,
+		'width' : 468,
+		'params' : {}
+	};"></script>
+</div>
 
     <footer>
         <p>© 2025 YourPCGames. All Rights Reserved.</p>
