--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
 
      </header>
- 
+	 
+ <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
  <div class="tags">
     <a href="#" class="tag-button">Action</a>
     <a href="#" class="tag-button">Sports</a>
