--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
 	 <script type='text/javascript' src='//pl26123463.effectiveratecpm.com/d8/71/e9/d871e9d5735ede95cca7a01a9b5ec8ba.js'></script>
      <header>
 	     <script type="text/javascript" src="https://vdbaa.com/pun.php?section=General&pt=6&pub=194269&ga=g"></script>
-	       <h1>🎮 Welcome to Salman Syed Creations 🚀</h1>
-         <input type="text" id="searchBar" placeholder="Search for games..." onkeyup="searchGame()">
+	   <h1>🎮 Welcome to Salman Syed Creations 🚀</h1>
+        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=194269&format=468x60&ga=g"></script>
+<noscript><a href="https://yllix.com/publishers/194269" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+	     <input type="text" id="searchBar" placeholder="Search for games..." onkeyup="searchGame()">
          <button onclick="searchGame()">🔍 Search</button>
 	     <button onclick="openPopup()">Click Me</button>
 
