--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
         <a href="real-cricket-26.html" class="view-details-btn">View Details</a>
       <a href="https://www.effectiveratecpm.com/xzr6c15j?key=eeb1fc45eee5079622936a866345640f" class="Fast-download-btn">Fast Download</a>
     </div>
+
+	 
+<div class="game-box">
+    <img src="shayan-present-96.jpg" alt="SHAYAN PRESENT 96">
+    <h2>SHAYAN PRESENT 96</h2>
+    <p>Enjoy the thrilling cricket experience with SHAYAN PRESENT 96. Play various game modes and tournaments.</p>
+    <a href="shayan-present-96.html" class="view-details-btn">View Details</a>
 </div>
 
 
