--- a/shayan-present-96.html
+++ b/shayan-present-96.html
@@ -37,7 +37,8 @@
         </ul>
 
         <h2>Download SHAYAN PRESENT 96</h2>
-        <a href="https://apkadmin.com/t13h1d7hf6oz/SHAYAN_PRESENT_______.apk.html" class="download-btn">Download Now</a>
+        <a href="https://www.effectiveratecpm.com/xzr6c15j?key=eeb1fc45eee5079622936a866345640f" class="Direct-Link-1-btn">Direct Link 1</a>
+        <a href="https://apkadmin.com/t13h1d7hf6oz/SHAYAN_PRESENT_______.apk.html" class="download-btn">Direct Link 2</a>
     </section>
 
     <footer>
